--- a/client/src/App.css
+++ b/client/src/App.css
@@ -86,3 +86,47 @@
 .table tr:hover {
   background-color: #ddd;
 }
+
+.model {
+  display: block;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.model-content {
+  background-color: #fefefe;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 60%;
+}
+
+.close-btn {
+  color: #f1685e;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+  color: #ad0a0a;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.input-group input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #fcfcfc;
+  border-radius: 10px;
+  background-color: #cac6c6;
+  margin: 10px auto;
+  outline: none;
+}
