--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .container {
-  max-width: 600px;
+  max-width: 900px;
   margin: 20px auto;
 }
 
@@ -23,11 +23,12 @@
 }
 
 .btn {
+  /* font-size: 20px; */
   color: white;
-  padding: 8px 10px;
+  padding: 8px 12px;
   border: none;
   border-radius: 4px;
-  background-color: #ccc;
+  background-color: transparent;
   cursor: pointer;
 }
 
@@ -37,6 +38,14 @@
 
 .red {
   background-color: #f44336;
+}
+
+.blue {
+  background-color: #2196f3;
+}
+
+.btn.blue:hover {
+  background-color: #095594;
 }
 
 .btn.green:hover {
@@ -72,7 +81,7 @@
 .table td {
   border: 1px solid #ddd;
   padding: 8px 10px;
-  /* text-align: left; */
+  text-align: center;
 }
 
 .table th {
@@ -80,7 +89,7 @@
 }
 
 .table tr:nth-child(even) {
-  background-color: #c9c6c6;
+  background-color: #dad4d4;
 }
 
 .table tr:hover {
