--- a/client/src/App.css
+++ b/client/src/App.css
@@ -137,6 +137,19 @@
   cursor: pointer;
 }
 
+.input-content {
+  margin-top: 30px;
+}
+
+.input-group {
+  margin-bottom: 10px;
+}
+
+.input-group label {
+  display: block;
+  margin-left: 10px;
+}
+
 .input-group input {
   width: 100%;
   padding: 10px;
